--- a/01_doker_compose/nginx/nginx.conf
+++ b/01_doker_compose/nginx/nginx.conf
@@ -1,42 +1,44 @@
 # количество ядер
-worker_processes  1;
+worker_processes 1;
 
 # кол-во соединений
 events {
-  worker_connections  1024;
+    worker_connections 1024;
 }
 
 http {
-  include       mime.types;
-  log_format  main  '$remote_addr - $remote_user [$time_local] "$request" '
-                      '$status $body_bytes_sent "$http_referer" '
-                      '"$http_user_agent" "$http_x_forwarded_for"';
+    include mime.types;
+    log_format main '$remote_addr - $remote_user [$time_local] "$request" '
+    '$status $body_bytes_sent "$http_referer" '
+    '"$http_user_agent" "$http_x_forwarded_for"';
 
-  sendfile        on;
-  tcp_nodelay     on;
-  tcp_nopush      on;
-  client_max_body_size 200m;
-  
-  
-  gzip on;
-  gzip_comp_level 3;
-  gzip_min_length 1000;
-  gzip_types
-        text/plain
-        text/css
-        application/json
-        application/x-javascript
-        text/xml
-        text/javascript;
+    resolver 127.0.0.11 valid=30s ipv6=off;
+
+    sendfile on;
+    tcp_nodelay on;
+    tcp_nopush on;
+    client_max_body_size 200m;
+
+    server_tokens off;
+    gzip on;
+    gzip_comp_level 3;
+    gzip_min_length 1000;
+    gzip_types
+    text/plain
+    text/css
+    application/json
+    application/x-javascript
+    text/xml
+    text/javascript;
 
 
-# Host. Определяет, на какой именно виртуальный хост, обслуживаемый Nginx, отправить запрос.
-# X-Real-IP. IP клиента, который используется Nginx. Для Docker Compose это IP шлюза (gateway), через который прошёл запрос.
-# X-Forwarded-For. IP клиента за всеми прокси-серверами. По умолчанию показывается только IP шлюза, как и для X-Real-IP, но можно настроить доверенные подсети.
-  proxy_redirect     off;
-  proxy_set_header   Host             $host;
-  proxy_set_header   X-Real-IP        $remote_addr;
-  proxy_set_header   X-Forwarded-For  $proxy_add_x_forwarded_for;
+    # Host. Определяет, на какой именно виртуальный хост, обслуживаемый Nginx, отправить запрос.
+    # X-Real-IP. IP клиента, который используется Nginx. Для Docker Compose это IP шлюза (gateway), через который прошёл запрос.
+    # X-Forwarded-For. IP клиента за всеми прокси-серверами. По умолчанию показывается только IP шлюза, как и для X-Real-IP, но можно настроить доверенные подсети.
+    proxy_redirect off;
+    proxy_set_header Host $host;
+    proxy_set_header X-Real-IP $remote_addr;
+    proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
 
-  include conf.d/*.conf;
+    include conf.d/*.conf;
 }
