Добавлены конфигурационные файлы для docker-compose, nginx

--- a/01_doker_compose/.env.example
+++ b/01_doker_compose/.env.example
@@ -2,9 +2,15 @@
 DB_NAME=databasename
 DB_USER=user
 DB_PASSWORD=password
-DB_HOST=127.0.0.1
+DB_HOST=db
 DB_PORT=5432
 
 # Django
 SECRET_KEY="secretkey"
 DEBUG=False
+
+DJANGO_SU_NAME=admin
+DJANGO_SU_EMAIL=admin@example.com
+DJANGO_SU_PASSWORD=password
+
+COMPOSE_PROJECT_NAME=compose_name
