--- a/01_doker_compose/nginx/conf.d/site.conf
+++ b/01_doker_compose/nginx/conf.d/site.conf
@@ -1,32 +1,55 @@
+upstream app_server {
+    # fail_timeout=0 means we always retry an upstream even if it failed
+    # to return a good HTTP response
+
+    # for UNIX domain socket setups
+    # server unix:/tmp/gunicorn.sock fail_timeout=0;
+
+    # for a TCP configuration
+    server django:8000 fail_timeout=0;
+}
+
 server {
     listen 80 default_server;
     listen [::]:80 default_server;
     server_name _;
 
-    # root /data;
-    location @backend {
-        proxy_pass http://django:8000;
+    root /www/;
+
+
+    # location / {
+    #     proxy_redirect off;
+    #     proxy_pass http://app_server;
+    # }
+    location /admin/ {
+        proxy_set_header Host $http_host;
+        proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+        proxy_set_header X-Forwarded-Proto $scheme;
+        # we don't want nginx trying to do something clever with
+        # redirects, we set the Host: header above already.
+        proxy_redirect off;
+        proxy_pass http://app_server;
     }
 
-    location / {
-        try_files $uri $uri/ @backend;
+    location /api/ {
+        # proxy_set_header Host $http_host;
+        # proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+        # proxy_set_header X-Forwarded-Proto $scheme;
+        # we don't want nginx trying to do something clever with
+        # redirects, we set the Host: header above already.
+        proxy_redirect off;
+        proxy_pass http://app_server;
     }
-    location /static/ {
-        root /;
-        autoindex off;
-        # log_not_found off;
+
+    location ~* \.(?:jpg|jpeg|gif|png|ico|css|js)$ {
+        # root /static;
+        log_not_found off;
         expires 5d;
     }
 
-    # location ~* \.(?:jpg|jpeg|gif|png|ico|css|js)$ {
-    #     root /static;
-    #     log_not_found off;
-    #     expires 5d;
-    # }
-
-    # error_page 404 /404.html;
-    # error_page 500 502 503 504 /50x.html;
-    # location = /50x.html {
-    #     root html;
-    # }
+    error_page 404 /404.html;
+    error_page 500 502 503 504 /50x.html;
+    location = /50x.html {
+        root html;
+    }
 }
