--- a/01_doker_compose/nginx/nginx.conf
+++ b/01_doker_compose/nginx/nginx.conf
@@ -1,9 +1,14 @@
 # количество ядер
 worker_processes 1;
 
+user nobody nogroup;
+
 # кол-во соединений
 events {
     worker_connections 1024;
+    accept_mutex off; # set to 'on' if nginx worker_processes > 1
+    # 'use epoll;' to enable for Linux 2.6+
+    # 'use kqueue;' to enable for FreeBSD, OSX
 }
 
 http {
@@ -39,6 +44,7 @@ http {
     proxy_set_header Host $host;
     proxy_set_header X-Real-IP $remote_addr;
     proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+    proxy_set_header X-Forwarded-Proto $scheme;
 
     include conf.d/*.conf;
 }
